--- a/lib/generators/templates/migration.rb.erb
+++ b/lib/generators/templates/migration.rb.erb
@@ -3,7 +3,7 @@ class ActsAsFavoritorMigration < ActiveRecord::Migration<% if Rails::VERSION::MA
         create_table :favorites, force: true do |t|
             t.references :favoritable, polymorphic: true, null: false
             t.references :favoritor, polymorphic: true, null: false
-            t.string :scopes, default: [:favorites].to_yaml, null: false
+            t.string :scope, default: 'favorites', null: false
             t.boolean :blocked, default: false, null: false
             t.timestamps
         end
