--- a/lib/generators/templates/migration.rb.erb
+++ b/lib/generators/templates/migration.rb.erb
@@ -3,12 +3,13 @@ class ActsAsFavoritorMigration < ActiveRecord::Migration<% if Rails::VERSION::MA
         create_table :favorites, force: true do |t|
             t.references :favoritable, polymorphic: true, null: false
             t.references :favoritor, polymorphic: true, null: false
-            t.string :scope, default: ActsAsFavoritor.default_scope, null: false
-            t.boolean :blocked, default: false, null: false
+            t.string :scope, default: ActsAsFavoritor.default_scope, null: false, index: true
+            t.boolean :blocked, default: false, null: false, index: true
             t.timestamps
         end
 
         add_index :favorites, ['favoritor_id', 'favoritor_type'], name: 'fk_favorites'
+        add_index :favorites, ['favoritable_id', 'favoritable_type'], name: 'fk_favoritables'
         add_index :favorites, ['favoritable_id', 'favoritable_type'], name: 'fk_favoritables'
     end
 
