--- a/lib/generators/templates/acts_as_favoritor.yml.erb
+++ b/lib/generators/templates/acts_as_favoritor.yml.erb
@@ -4,3 +4,6 @@
 
 # Specify your default scope. Learn more about scopes here: https://github.com/slooob/acts_as_favoritor#scopes
 default_scope: <%= options[:scope] %>
+
+# Enable caching. Learn more about caching here: https://github.com/slooob/acts_as_favoritor#caching
+cache: <%= options[:cache] %>
