--- a/lib/generators/templates/migration.rb.erb
+++ b/lib/generators/templates/migration.rb.erb
@@ -3,7 +3,7 @@ class ActsAsFavoritorMigration < ActiveRecord::Migration<%= migration_version %>
         create_table :favorites, force: true do |t|
             t.references :favoritable, polymorphic: true, null: false
             t.references :favoritor, polymorphic: true, null: false
-            t.string :scope, default: ActsAsFavoritor.default_scope, null: false, index: true
+            t.string :scope, default: ActsAsFavoritor.configuration.default_scope, null: false, index: true
             t.boolean :blocked, default: false, null: false, index: true
             t.timestamps
         end
