--- a/lib/generators/templates/migration.rb.erb
+++ b/lib/generators/templates/migration.rb.erb
@@ -19,7 +19,8 @@ class ActsAsFavoritorMigration < ActiveRecord::Migration<%= migration_version %>
               ['favoritable_id', 'favoritable_type'],
               name: 'fk_favoritables'
     add_index :favorites,
-              ['favoritable_id', 'favoritor_id', 'favoritable_type'],
+              ['favoritable_type', 'favoritable_id', 'favoritor_type',
+              'favoritor_id', 'scope'],
               name: 'uniq_favorites__and_favoritables', unique: true
   end
 
